# pyclimproj

./: LICENSE  README.md  pyproject.toml  setup.py
pyclimproj/: downloader.py
pyclimproj.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
pyclimproj/data/: prcp_ACCESS_CM2_1980_1982_coarsened.nc
pyclimproj/tests/: __init__.py  test_downloader.py
pyclimproj/tests/test_output/: download_links_only.txt
